// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server should query events according to schema 1`] = `
Object {
  "data": Object {
    "events": Array [
      Object {
        "date": "2020-04-02",
        "day": "Thursday",
        "group": "Melbourne Silicon Beach",
        "id": "269253587",
        "link": "https://www.meetup.com/Melbourne-Silicon-Beach/events/269253587/",
        "name": "Silicon Beach Pitch Night - April 2020 (Online Event!)",
        "time": "17:30",
        "timeInMilliseconds": "1585809000000",
        "venue": "Online event",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`server should query groups according to schema 1`] = `
Object {
  "data": Object {
    "groups": Array [
      Object {
        "category": "Tech",
        "city": "Melbourne",
        "name": "Melbourne Silicon Beach",
        "nextEvent": Object {
          "date": "2020-04-02",
          "day": "Thursday",
          "group": "Melbourne Silicon Beach",
          "id": "269253587",
          "link": "https://www.meetup.com/Melbourne-Silicon-Beach/events/269253587/",
          "name": "Silicon Beach Pitch Night - April 2020 (Online Event!)",
          "time": "17:30",
          "timeInMilliseconds": "1585809000000",
          "venue": "Online event",
        },
        "url": "Melbourne-Silicon-Beach",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
